--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "EntityFrameworkConnection": "Server=(localdb)\\mssqllocaldb;Initial Catalog=dotnetweb;"
+ "EntityFrameworkConnection": "Server=tcp:davidsilwal.database.windows.net,1433;Initial Catalog=dotnetweb;Persist Security Info=False;User ID=davidsilwal;Password=Admin123!@#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
   },
   "AppSettings": {
     "UseSsl": false,
