--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -1,7 +1,7 @@
-﻿{
+{
   "ConnectionStrings": {
-    //"EntityFrameworkConnection": "Server=tcp:davidsilwal.database.windows.net,1433;Initial Catalog=dotnetweb;Persist Security Info=False;User ID=davidsilwal;Password=Admin123!@#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-    "EntityFrameworkConnection": "Server=(localdb)\\mssqllocaldb;Initial Catalog=dotnetwebs"
+    "EntityFrameworkConnection": "Server=tcp:davidsilwal.database.windows.net,1433;Initial Catalog=dotnetweb;Persist Security Info=False;User ID=davidsilwal;Password=Admin123!@#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //"EntityFrameworkConnection": "Server=(localdb)\\mssqllocaldb;Initial Catalog=dotnetwebs"
 
   },
   "AppSettings": {
